--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ISLAMICK BOT",
+  "name": "side",
   "version": "10.1.1",
-  "description": "made by 𝐂𝐘𝐁𝐄𝐑 ☢️_𖣘 -𝐁𝐎𝐓 ⚠️ 𝑻𝑬𝑨𝑴_☢️",
+  "description": "made by Tanvir",
   "main": "Cyber.js",
   "engines": {
       "node": "20.x",
